--- a/config/wykonanie_grupa_a_typ_b_tydzien.yaml
+++ b/config/wykonanie_grupa_a_typ_b_tydzien.yaml
@@ -1,41 +1,111 @@
 # Wykonanie Grupa A - Typ B - Tydzień
-# Nagłówek + Podsumowanie + 1 tabela danych
-# Dane: CALL schema.procedura({nr}) → zwraca result set
+# Generowany DLA KAŻDEJ LOKALIZACJI (tylko wybrany sklep)
+# Struktura identyczna jak Typ A, ale zamiast wszystkich sklepów
+# pokazujemy TYLKO wybrany sklep (lokalizację)
+#
+# Parametry: {nr} = numer umowy, {lok} = nazwa lokalizacji
 
 report_type: "Wykonanie Grupa A - Typ B - Tydzień"
 period_type: "weekly"
 group: "A"
 
-# === PODSUMOWANIE (8 wierszy x 2 kolumny) ===
+# === TABELA 1 – PODSUMOWANIE (8 wierszy x 2 kolumny) ===
 summary:
-  title: "Podsumowanie tygodniowe"
+  title: "Dane raportu"
   labels:
-    - "Nazwa klienta"
-    - "Numer klienta"
-    - "Liczba podtypów"
-    - "Status"
-    - "Tydzień"
+    - "Nr umowy"
+    - "Typ"
+    - "Nazwa"
+    - "Lok"
     - "Rok"
-    - "Opiekun"
-    - "E-mail"
-  query: "CALL SCHEMA.PROC_PODSUMOWANIE_A_TYDZIEN({nr})"
+    - "Kwar"
+    - "DR"
+    - "EMail"
+  query: "CALL SCHEMA.PROC_SUMMARY_WYKONANIE_A({nr})"
 
 # === TABELE DANYCH ===
 data_tables:
-  - name: "table1"
-    title: "Wykonanie tygodniowe - Typ B"
+  # --- TABELA 2 – Nagłówek duży (5x2) ---
+  - name: "header_table"
+    title: "Podsumowanie finansowe"
     headers:
-      - "Podtyp"
-      - "Poniedziałek"
-      - "Wtorek"
-      - "Środa"
-      - "Czwartek"
-      - "Piątek"
-      - "Suma tydzień"
-      - "Realizacja %"
-    query: "CALL SCHEMA.PROC_WYKONANIE_A_TYP_B_T1({nr})"
+      - "Rabat"
+      - "Rabat"
+      - "Udzielony"
+      - "Wartość"
+      - "Wypłata"
+    query: "CALL SCHEMA.PROC_HEADER_WYKONANIE_A({nr})"
     formatting:
-      currency_columns: [1, 2, 3, 4, 5, 6]
-      percentage_columns: [7]
+      percentage_columns: [0, 1]
+      currency_columns: [2, 3, 4]
+      add_total_row: false
+      column_widths: null
+
+  # --- TABELA 3a – Sklepy: grupa umowa X (TYLKO wybrana lokalizacja) ---
+  - name: "sklepy_x"
+    title: "Wykonanie tygodniowe"
+    subtitle: "Grupa umowa → X"
+    headers:
+      - "Nazwa sklepu"
+      - "Grupa umowa"
+      - "Klasyfikacja"
+      - "Typ lok"
+      - "Podstawa"
+      - "Bonus"
+      - "Wyprac"
+      - "Bonus łącz"
+      - "Wartość bonusu"
+      - "Udzielony rabat"
+      - "Wartość do wyr"
+    query: "CALL SCHEMA.PROC_SKLEPY_WYKONANIE_A_X_LOK({nr}, '{lok}')"
+    formatting:
+      currency_columns: [4, 8, 9, 10]
+      percentage_columns: [5, 6, 7]
+      add_total_row: true
+      column_widths: null
+
+  # --- TABELA 3b – Sklepy: grupa umowa Y (TYLKO wybrana lokalizacja) ---
+  - name: "sklepy_y"
+    title: "Wykonanie tygodniowe"
+    subtitle: "Grupa umowa → Y"
+    headers:
+      - "Nazwa sklepu"
+      - "Grupa umowa"
+      - "Klasyfikacja"
+      - "Typ lok"
+      - "Podstawa"
+      - "Bonus"
+      - "Wyprac"
+      - "Bonus łącz"
+      - "Wartość bonusu"
+      - "Udzielony rabat"
+      - "Wartość do wyr"
+    query: "CALL SCHEMA.PROC_SKLEPY_WYKONANIE_A_Y_LOK({nr}, '{lok}')"
+    formatting:
+      currency_columns: [4, 8, 9, 10]
+      percentage_columns: [5, 6, 7]
+      add_total_row: true
+      column_widths: null
+
+  # --- TABELA 3c – Sklepy: grupa umowa Z (TYLKO wybrana lokalizacja) ---
+  - name: "sklepy_z"
+    title: "Wykonanie tygodniowe"
+    subtitle: "Grupa umowa → Z"
+    headers:
+      - "Nazwa sklepu"
+      - "Grupa umowa"
+      - "Klasyfikacja"
+      - "Typ lok"
+      - "Podstawa"
+      - "Bonus"
+      - "Wyprac"
+      - "Bonus łącz"
+      - "Wartość bonusu"
+      - "Udzielony rabat"
+      - "Wartość do wyr"
+    query: "CALL SCHEMA.PROC_SKLEPY_WYKONANIE_A_Z_LOK({nr}, '{lok}')"
+    formatting:
+      currency_columns: [4, 8, 9, 10]
+      percentage_columns: [5, 6, 7]
       add_total_row: true
       column_widths: null
